# plugin2

./: .gitignore  .swcrc  README.md  SECURITY_BASELINE_EDITION.md  WINDOWS_BUILD.md  WINDOWS_COMPATIBILITY_FIX.md  antd-fontsize-plan.md  convert-csv-to-excel.ts  craco.config.js  er.name  eslint.config.js  index.css  index.html  obfuscate.js  package-lock.json  package.json  run.bat  simple_example_base64.ts  tsconfig.json  vite.config.ts  安装命令
.github/workflows/: build-macos.yml
scripts/: copy-pdf-worker.cjs  copy-pdf-worker.js
src/: App.css  App.tsx  device.tsx  index.css  lib.rs  main.rs  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.sign.local.example.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/common/: CleanupRegistry.tsx  Http.tsx  Storage.tsx  assest.tsx  audio.ts  authNavigate.tsx  cache.tsx  classes.tsx  errorCus.tsx  file-converter.tsx  lineStorage.ts  llm.ts  pluginContext.tsx  routerCus.tsx  time.ts  utils.tsx  utilsImg.tsx  utilsNode.tsx  workflowTransfer.ts
src/components/: ComActivation.tsx  ComAuthCheck.tsx  ComBack.tsx  ComBar.tsx  ComCard.css  ComCard.tsx  ComConcat.tsx  ComConsumeRulesLink.tsx  ComCreateCard.tsx  ComCsvTable.tsx  ComCusSvc.tsx  ComCusSvc2.tsx  ComDbActions.tsx  ComDebugSwitch.tsx  ComDoc.tsx  ComDrawer.tsx  ComDropdown.tsx  ComEditor.tsx  ComFloatBack.tsx  ComHandleDot.tsx  ComHighSwitch.tsx  ComImgQR.tsx  ComMarkdown.css  ComMarkdown.tsx  ComModalCloneOverwrite.tsx  ComModalShare.tsx  ComModalTemplate.tsx  ComNodeInput.tsx  ComNotice.tsx  (+35 more)
(+155 files in other folders)
