[package]
name = "plugin2_desktop"
version = "0.1.1"
description = "Education desktop edition for plugin2"
edition = "2021"

[lib]
name = "plugin2_desktop"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"

[package.metadata]

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
